--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,8 @@
-<!doctype html>
-<html lang="en">
-  {% include head.html %}
-  {% include header.html %}
-  <body>
-    {% include sidebar.html %}
-    <div class="container">
-    {{ content }}
-	  </div> <!-- container -->
-  </body>
-</html>
+---
+layout: base
+---
+<h1>{{ page.title }}</h1>
+<p class="meta">{{ page.date | date_to_string }}</p>
+<div class="page">
+  {{ content }}
+</div>
