Various formatting changes.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,10 +7,9 @@
   <!-- favicon
     <link rel="shortcut icon" href="/img/favicon.png">
   -->
-  <title>InfosecSapper | {{ page.title }}</title>
   <!-- Stylesheet(s) -->
-  <link rel="stylesheet" type="text/css" href="/css/main.css"> <!-- Local CSS -->
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"> <!-- CDN for icons -->
-<!-- Google Analytics -->
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <!-- Google Analytics -->
   {% include analytics.html %}
+  <title>{{ site.name }} | {{ page.title }}</title>
 </head>
