--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,8 +2,8 @@
   <nav>
     <ul>
       <li><a href="/">Home</a></li>
-      <li><a href="/about">Blog</a></li>
-      <li><a href="/cv">About</a></li>
+      <li><a href="/Blog">Blog</a></li>
+      <li><a href="/About">About</a></li>
     </ul>
   </nav>
 </section>
