Fixing build errors

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<h1>{{ post.title }}</h1>
 <p>{{ page.date }}</p>
 <ul>{% for tag in page.tags %}...{% endfor %}</ul>
 {{ content }}
