Changes to analytics and tag manager.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,15 +1,15 @@
 <head>
+  <!-- Google Analytics -->
+  {% include analytics.html %}
   <!-- Metadata -->
   <meta charset="utf-8">
   <meta name="description" content="{{ page.description }}">
   <meta name="author" content="TheSapper">
-  <meta name="viewport" width="device width, initial-scale=1.0">
+  <meta name="viewport" width="device-width, initial-scale=1.0">
   <!-- favicon
     <link rel="shortcut icon" href="/img/favicon.png">
   -->
   <!-- Stylesheet(s) -->
   <link rel="stylesheet" type="text/css" href="/css/main.css">
-  <!-- Google Analytics -->
-  {% include analytics.html %}
   <title>{{ site.name }} | {{ page.title }}</title>
 </head>
