--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -3,6 +3,7 @@
   {% include head.html %}
   {% include header.html %}
   <body>
+    {% include tagman.html %} <!-- This has to be first -->
     {% include sidebar.html %}
     <div class="container">
     {{ content }}
