--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <meta name="description" content="{{ page.description }}">
     <meta name="author" content="TheSapper">
     <meta name="viewport" content="device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/style.scss">
     <title>{{ site.name }} | {{ page.title }}</title>
   </head>
   <body>
