--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <meta name="description" content="{{ page.description }}">
     <meta name="author" content="TheSapper">
     <meta name="viewport" content="device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/css/style.scss">
+    <link rel="stylesheet" href="/css/style.scss">
     <title>{{ site.name }} | {{ page.title }}</title>
   </head>
   <body>
@@ -28,6 +28,5 @@
         <p><small>Hosted on GitHub Pages &mdash; Based on the Minimal Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
   </body>
 </html>
