--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,4 +10,4 @@ layout: default
 {% if page.tags %}
   <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
 {% endif %}
-<p><a href="https://infosecsapper.github.io">Back</a><p>
+<p><a href="{{ site.github.url }}">Back</a><p>
