Adding GA with privacy statement. Minor markup tweaks to default layout.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,15 @@
 <!doctype html>
 <html lang=en>
   <head>
-    <!-- Google Analytics -->
-    {{% include analytics.html %}}
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107815621-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-107815621-1',{ 'allow_display_features': false, 'anonymize_ip': true });
+    </script>
+    <!-- End Google Analytics -->
     <!-- Metadata -->
     <meta charset="utf-8">
     <meta name="description" content="{{ page.description }}">
@@ -12,17 +19,17 @@
     <title>{{ site.name }} | {{ page.title }}</title>
   </head>
   <body>
-    {{% include sidebar.html %}}
     <div class="wrapper">
       <header>
-        <a href="{{ site.github.owner_url }}"> <h1>InfosecSapper</h1></a>
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+        <a href="https://infosecsapper.com"> <h1>InfosecSapper</h1></a>
+        <p class="view"><a href="{{ site.github.owner_url }}">GitHub</a> | <a href="https://twitter.com/InfosecSapper">Twitter</a></p>
       </header>
       <section>
       {{ content }}
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Based on the Minimal Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <br><p class="view"><small><a href="/privacy.html">Privacy Statement</a></small></p>
       </footer>
     </div>
   </body>
