Markup/down tweaks.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <a href="https://infosecsapper.com"> <h1>InfosecSapper</h1></a>
+        <a href="https://infosecsapper.com"> <h1>InfosecSapper Home</h1></a>
         <p class="view"><a href="{{ site.github.owner_url }}">GitHub</a> | <a href="https://twitter.com/InfosecSapper">Twitter</a></p>
       </header>
       <section>
