--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
     <meta name="description" content="{{ page.description }}">
     <meta name="author" content="TheSapper">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--<link rel="stylesheet" href="/css/style.css">-->
+    <link rel="stylesheet" href="/css/style.css">
     <title>{{ site.name }} | {{ page.title }}</title>
   </head>
   <body>
