Layout changes (markup).

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,15 +21,15 @@
   <body>
     <div class="wrapper">
       <header>
-        <a href="https://infosecsapper.com"> <h1>InfosecSapper Home</h1></a>
-        <p class="view"><a href="{{ site.github.owner_url }}">GitHub</a> | <a href="https://twitter.com/InfosecSapper">Twitter</a></p>
+        <h1>InfosecSapper</h1>
+        <p class="view"><a href="https://infosecsapper.com">Home</a> | <a href="{{ site.github.owner_url }}">GitHub</a> | <a href="https://twitter.com/InfosecSapper">Twitter</a></p>
       </header>
       <section>
       {{ content }}
       </section>
       <footer>
+        <p><small><a href="/privacy.html">Privacy Statement</a></small></p><br />
         <p><small>Hosted on GitHub Pages &mdash; Based on the Minimal Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-        <br><p class="view"><small><a href="/privacy.html">Privacy Statement</a></small></p>
       </footer>
     </div>
   </body>
