--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,13 +22,13 @@
     <div class="wrapper">
       <header>
         <h1>InfosecSapper</h1>
-        <p class="view"><a href="https://infosecsapper.com">Home</a> | <a href="{{ site.github.owner_url }}">GitHub</a> | <a href="https://twitter.com/InfosecSapper">Twitter</a></p>
+        <p class="view"><a href="https://infosecsapper.com">Home</a></p>
       </header>
       <section>
       {{ content }}
       </section>
       <footer>
-        <p><small><a href="/privacy.html">Privacy Statement</a></small></p><br />
+        <p><small><a href="/privacy.html">Privacy Statement</a> | <a href="{{ site.github.owner_url }}">GitHub</a> | <a href="https://twitter.com/InfosecSapper">Twitter</a></small></p>
         <p><small>Hosted on GitHub Pages &mdash; Based on the Minimal Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
