--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
       {{ content }}
       </section>
       <footer>
-        <p><small><a href="/privacy.html">Privacy Statement</a> | <a href="{{ site.github.owner_url }}">GitHub</a> | <a href="https://twitter.com/InfosecSapper">Twitter</a></small></p>
+        <p><small><a href="{{ site.github.owner_url }}">GitHub</a> | <a href="https://twitter.com/InfosecSapper">Twitter</a> | <a href="/privacy.html">Privacy Statement</a></small></p>
         <p><small>Hosted on GitHub Pages &mdash; Based on the Minimal Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
