--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<p><a href="{{ site.github.url }}">Back</a><p>
 <h1>{{ page.title }}</h1>
 <small>{{ page.date | date: "%-d %B %Y" }}</small>
 
@@ -10,4 +10,4 @@ layout: default
 {% if page.tags %}
   <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
 {% endif %}
-<br><p><a href="{{ site.github.url }}">Back</a><p>
+<br /><p><a href="{{ site.github.url }}">Back</a><p>
