--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,8 @@
       gtag('config', 'UA-107815621-1',{ 'allow_display_features': false, 'anonymize_ip': true });
     </script>
     <!-- End Google Analytics -->
+    <!-- Theme selector script -->
+    <script src="/themes.js"></script>
     <!-- Metadata -->
     <meta charset="utf-8">
     <meta name="description" content="{{ page.description }}">
@@ -18,18 +20,18 @@
     <link rel="stylesheet" href="/css/style.css">
     <title>{{ site.name }} | {{ page.title }}</title>
   </head>
-  <body>
+  <body id="body" class="light-mode">
     <div class="wrapper">
       <header>
         <h1>InfosecSapper</h1>
-        <p class="view"><a href="https://infosecsapper.com">Home</a></p>
+        <p class="view"><a href="https://infosecsapper.com">Home</a> | <a id="theme-switch" href="javascript:toggleTheme();">Light Theme</a></p>
       </header>
       <section>
       {{ content }}
       </section>
       <footer>
         <p><small><a href="{{ site.github.owner_url }}">GitHub</a> | <a href="https://twitter.com/InfosecSapper">Twitter</a> | <a href="/privacy.html">Privacy Statement</a></small></p>
-        <p><small>Hosted on GitHub Pages &mdash; Based on the Minimal Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on GitHub Pages</small></p>
       </footer>
     </div>
   </body>
