--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <title>{{ site.name }} | {{ page.title }}</title>
   </head>
-  <body id="body" class="light-mode">
+  <body id="body" class="light-mode" onload="checkTheme();">
     <div class="wrapper">
       <header>
         <h1>InfosecSapper</h1>
