--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
     <div class="wrapper">
       <header>
         <h1>InfosecSapper</h1>
-        <p class="view"><a href="https://infosecsapper.com">Home</a> | <a id="theme-switch" href="javascript:toggleTheme();">Dark Theme</a></p>
+        <p class="view"><a href="https://infosecsapper.com">Home</a> | <a id="theme-switch" href="javascript:toggleTheme();">Change Theme</a></p>
       </header>
       <section>
       {{ content }}
