Adding link to Keybase
Adding link to Keybase in footer with PGP key.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
       {{ content }}
       </section>
       <footer>
-        <p><small><a href="{{ site.github.owner_url }}">GitHub</a> | <a href="https://twitter.com/InfosecSapper">Twitter</a> | <a href="/privacy.html">Privacy Statement</a></small></p>
+        <p><small><a href="{{ site.github.owner_url }}">GitHub</a> | <a href="https://twitter.com/InfosecSapper">Twitter</a> | <a href="/privacy.html">Privacy Statement</a><br />PGP: <a href="https://keybase.io/thesapper">E8E079E314EF4199</a></small></p>
         <p><small>Hosted on GitHub Pages</small></p>
       </footer>
     </div>
