Improving cookie consent
Issue #4 - added functionality from CookieBot.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,17 +1,18 @@
 <!doctype html>
 <html lang=en>
   <head>
+    <!-- Cookie consent using CookieBot -->
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="e21d64b9-ded7-4d94-bef5-51e6b831bb50" type="text/plain" async></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107815621-1"></script>
-    <script>
+    <script data-cookieconsent="statistics" src="https://www.googletagmanager.com/gtag/js?id=UA-107815621-1" type="text/plain" async></script>
+    <script data-cookieconsent="statistics" type="text/plain">
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
       gtag('config', 'UA-107815621-1',{ 'allow_display_features': false, 'anonymize_ip': true });
     </script>
-    <!-- End Google Analytics -->
     <!-- Theme selector script -->
-    <script src="/themes.js"></script>
+    <script data-cookieconsent="preferences" src="/themes.js" type="text/plain"></script>
     <!-- Metadata -->
     <meta charset="utf-8">
     <meta name="description" content="{{ page.description }}">
