--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,21 @@
       gtag('config', 'UA-107815621-1',{ 'allow_display_features': false, 'anonymize_ip': true });
     </script>
     <!-- Theme selector script -->
-    <script data-cookieconsent="preferences" src="/themes.js" type="text/plain"></script>
+    <script>
+    function toggleTheme(){
+    	var body = document.getElementById('body');
+    	var currentClass = body.className;
+    	body.className = currentClass == "dark-mode" ? "light-mode" : "dark-mode";
+    	localStorage.setItem("theme",body.className);
+    }
+    function checkTheme(){
+    	if (!localStorage.getItem("theme")){
+    		localStorage.setItem("theme",document.getElementById('body').className);
+    	} else {
+    		document.getElementById('body').className = localStorage.getItem("theme");
+    	}
+    }
+    </script>
     <!-- Cookie consent using CookieBot -->
     <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="e21d64b9-ded7-4d94-bef5-51e6b831bb50" type="text/plain" async></script>
     <!-- Metadata -->
