Trying cookie consent js fix.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang=en>
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script data-cookieconsent="statistics" src="https://www.googletagmanager.com/gtag/js?id=UA-107815621-1" type="text/plain" async></script>
+    <script src="https://www.googletagmanager.com/gtag/js?id=UA-107815621-1" data-cookieconsent="statistics" type="text/plain" async></script>
     <script data-cookieconsent="statistics" type="text/plain">
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
@@ -26,7 +26,7 @@
     }
     </script>
     <!-- Cookie consent using CookieBot -->
-    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="e21d64b9-ded7-4d94-bef5-51e6b831bb50" type="text/plain" async></script>
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="e21d64b9-ded7-4d94-bef5-51e6b831bb50" type="text/javascript" async></script>
     <!-- Metadata -->
     <meta charset="utf-8">
     <meta name="description" content="{{ page.description }}">
