--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
     <title>{{ site.name }} | {{ page.title }}</title>
+    {% feed_meta %}
   </head>
   <body id="body" class="light-mode" onload="checkTheme();">
     <div class="wrapper">
