Jekyll SEO plugin support.
Added config for Jekyll SEO plugin.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,12 +21,11 @@
     <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="e21d64b9-ded7-4d94-bef5-51e6b831bb50" type="text/javascript" async></script>
     <!-- Metadata -->
     <meta charset="utf-8">
-    <meta name="description" content="{{ page.description }}">
-    <meta name="author" content="TheSapper">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
     <title>{{ site.name }} | {{ page.title }}</title>
     {% feed_meta %}
+    {% seo %}
   </head>
   <body id="body" class="light-mode" onload="checkTheme();">
     <div class="wrapper">
