--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,10 +4,13 @@ layout: default
 
 <h1>{{ page.title }}</h1>
 <small>{{ page.date | date: "%-d %B %Y" }}</small>
-
+<br />
+<br />
 {{content}}
 
 {% if page.tags %}
   <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
 {% endif %}
-<br /><p><a href="{{ site.github.url }}">Back</a><p>
+<br />
+<br />
+<p><a href="{{ site.github.url }}">Back</a><p>
