--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,9 +37,9 @@
       {{ content }}
       </section>
       <footer>
-        <p><small><a href="{{ site.github.owner_url }}">GitHub</a> | <a href="https://twitter.com/InfosecSapper">Twitter</a> | <a href="/privacy.html">Privacy Statement</a><br />PGP: <a href="https://keybase.io/thesapper">E8E079E314EF4199</a></small></p>
+        <p><small><a href="{{ site.github.owner_url }}">GitHub</a> | <a href="https://twitter.com/InfosecSapper">Twitter</a> | <a rel="me" href="https://mastodon.social/@infosecsapper">Mastodon</a><br />PGP: <a href="https://keybase.io/thesapper">E8E079E314EF4199</a></small></p>
         <p>
-          <small><a rel="me" href="https://mastodon.social/@infosecsapper">Mastodon</a></small><br />
+          <small><a href="/privacy.html">Privacy Statement</a></small><br />
           <small>Hosted on GitHub Pages</small>
         </p>
       </footer>
