--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,16 +1,14 @@
 ---
 layout: default
 ---
-
-<h1>{{ page.title }}</h1>
-<small>{{ page.date | date: "%-d %B %Y" }}</small>
-<br />
-<br />
-{{content}}
-
-{% if page.tags %}
-  <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
-{% endif %}
-<br />
-<br />
-<p><a href="{{ site.github.url }}">Back</a><p>
+<article>
+    <h1>{{ page.title }}</h1>
+    {{content}}
+    <small>Published: <time>{{ page.date | date: "%Y-%m-%d" }}</time></small>
+</article>
+<aside>
+    <section class="share" aria-label="Share">
+        <h3>Share</h3>
+        {% include social.html %}
+    </section>
+</aside>
