--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -1,15 +1,23 @@
 @import "normalize";
-@import "fonts";
 @import "rouge-base16-dark.scss";
 @import "fa/fontawesome.scss";
 @import "fa/solid.scss";
 @import "fa/brands.scss";
+
+@font-face {
+  font-family: 'OpenSansLight';
+  src: url('../webfonts/OpenSans-Light-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
 
 /* Try to be as responsive as possible */
 @media screen and (prefers-reduced-motion: no-preference) {
   /* Set colours */
   $main_background: #252525;
   $light_background: #353535;
+  $main_border: #434343;
   $main_text: #f0e7d5;
   $header_text: #e8e8e8;
   $link_text: #ffcc00;
@@ -30,7 +38,6 @@
     
       /* Start of generic settings */
       h1 {
-        display: block;
         margin: 0 0 3vw;
         font-size: 1.75em;
         line-height: 1.1;
@@ -38,14 +45,12 @@
         color: $header_text;
       }
       h2 {
-        display: block;
         margin: 0 0 3vw;
         font-size: 1.5em;
         line-height: 1.1;
         color: $header_text;
       }
       h3 {
-        display: block;
         margin: 0 0 3vw;
         font-size: 1.25em;
         line-height: 1.1;
@@ -57,7 +62,7 @@
         color: $header_text;
       }
     
-      p, ul, ol, table, pre, dl {margin:0 0 20px;}
+      p, ul, ol, table, pre, dl {margin: 0 0 20px;}
       
       a {
         color: $link_text;
@@ -80,22 +85,18 @@
         overflow: hidden;
       }
       
-      strong {
-        font-family: 'OpenSansBold', "Helvetica Neue", Helvetica, Arial, sans-serif !important;
-        font-weight: normal;
-      }
-      
       blockquote {
-        border-left:3px solid #ffcc00;
-        margin:0;
-        padding:0 0 0 20px;
-        font-style:italic;
+        margin: 0;
+        padding: 0 0 0 5vw;
+        border-left: 1vw solid $header_text;
+        color: $header_text;
+        font-style: italic;
       }
       
       code {
         font-family: Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, monospace;
-        color:#efefef;
-        font-size:13px;
+        color: #efefef;
+        font-size: 0.8em;
         margin: 0 4px;
         padding: 4px 6px;
         border-radius: 2px;
@@ -141,62 +142,101 @@
           }
         }
       }
-      
-      hr {
-        border: 0;
-        outline: none;
-        height: 3px;
-        margin: 0 0 20px;
+
+      details {
+        margin: 0 0 3vw;
+        summary {
+          h1, h2, h3, h4, h5, h6 {display:inline;}
+          cursor: pointer;
+          outline: 0;
+        }
       }
     
       /* Page section settings */
       header {
         z-index: 100;
-        height: 10vw;
+        height: 7vw;
         width: 100vw;
         padding: 1vw 0;
         position: sticky;
         top: 0px;
         background: $light_background;
-        border-bottom: 4px solid #434343;
+        border-bottom: 1vw solid $main_border;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         nav {
-          text-align: center;
-          a {padding: 0 2vw;}
+          ul {
+            padding: 0;
+            margin: 0;
+            li {
+              display: inline-block;
+              margin: 0 3vw;
+            }
+          }
         }
       }
-      
-      footer {
-        z-index: 100;
-        height: 10vw;
-        width: 100vw;
-        padding: 1vw 0;
-        position: sticky;
-        bottom: 0px;
-        text-align: right;
-        a {
-          position: sticky;
-          top: calc(100vh - 5vh);
-          display: inline-block;
-          }
-      } // End of main footer settings
     
       main {
         display: flex;
         flex-flow: column nowrap;
         padding: 0 2vw;
+        position: relative;
     
         article {
-          padding: 0 2vw;
+          padding: 2vw;
           overflow-x: hidden;
           img {max-width: 100%;}
-          header, footer {
-
-            position: absolute;
-          }
+          header, footer {position: absolute;}
         } // End of article
+
         aside {
-          section .share {}
+          section {
+            margin: 5vw 0;
+            border-top: 1vw solid $main_border;
+            ul {
+              padding: 0;
+              margin: 0;
+            }
+          }
+          .share {
+            ul {
+              li {display: inline-block;}
+            }
+          }
+          .pagination {
+            padding: 1vw 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            ul {
+              padding: 0;
+              margin: 0;
+              li {
+                display: inline-block;
+                margin: 0 3vw;
+              }
+            }
+          }
         } // End of aside
+        
+        .scroll-top {
+          position: absolute;
+          top: 100vh;
+          right: 5vw;
+          bottom: 0;
+          pointer-events: none;
+          a {
+            position: sticky;
+            pointer-events: all;
+            top: calc(100vh - 10vh);
+            display: inline-block;
+            padding: 0.25rem;
+            opacity: 75%;
+            background: $light_background;
+            border-radius: 50%;
+          }
+        }
       } // End of main
     } // End of body
   } // End of html
