--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -22,26 +22,27 @@
   $header_text: #e8e8e8;
   $link_text: #ffcc00;
   $link_hover: #ffeb9b;
+  $main_font: 1em/1.5 "OpenSansLight", Helvetica, Arial, sans-serif;
+  $code_font: 0.8em Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
   
   html {
     scroll-behavior: smooth;
     body {
-      display: flex;
-      min-height: 100vh;
-      flex-direction: column;
-
-      font: 1em/1.5 "OpenSansLight", Helvetica, Arial, sans-serif;
-      text-align: left;
-      color: $main_text;
-      background: $main_background;
       max-width: 100vw;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      background: $main_background;
+      text-align: left;
+      font: $main_font;
+      color: $main_text;
     
-      /* Start of generic settings */
+      // Start of generic settings
       h1 {
         margin: 0 0 3vw;
+        text-align: center;
         font-size: 1.75em;
         line-height: 1.1;
-        text-align: center;
         color: $header_text;
       }
       h2 {
@@ -51,7 +52,7 @@
         color: $header_text;
       }
       h3 {
-        margin: 0 0 3vw;
+        margin: 0 0 1vw;
         font-size: 1.25em;
         line-height: 1.1;
         color: $header_text;
@@ -65,57 +66,56 @@
       p, ul, ol, table, pre, dl {margin: 0 0 20px;}
       
       a {
+        text-decoration: none;
+        font-weight: 400;
         color: $link_text;
-        font-weight:400;
-        text-decoration:none;
-      
+              
         &:hover {
           color: $link_hover;
         }
       }
       
       ul .sr-only{
+        width: 1px;
+        height: 1px;
+        border: 0;
+        padding: 0;
         position: absolute;
+        overflow: hidden;
         clip: rect(1px 1px 1px 1px);
         clip: rect(1px, 1px, 1px, 1px);
-        padding: 0;
-        border: 0;
-        height: 1px;
-        width: 1px;
-        overflow: hidden;
       }
       
       blockquote {
         margin: 0;
-        padding: 0 0 0 5vw;
         border-left: 1vw solid $header_text;
-        color: $header_text;
+        padding: 0 0 0 5vw;
         font-style: italic;
+        color: $header_text;
       }
       
       code {
-        font-family: Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, monospace;
-        color: #efefef;
-        font-size: 0.8em;
         margin: 0 4px;
-        padding: 4px 6px;
         border-radius: 2px;
+        padding: 4px 6px;
+        font: $code_font;
+        color: #efefef;
       }
       
       pre {
+        border:1px solid #121212;
+        border-radius: 2px;
+        box-shadow: inset 0 1px 3px rgba(0,0,0,.3);
         padding:8px 15px;
         background: #191919;
-        border-radius: 2px;
-        border:1px solid #121212;
-        box-shadow: inset 0 1px 3px rgba(0,0,0,.3);
         overflow: auto;
         overflow-y: hidden;
       
         code {
-          color: #efefef;
-          text-shadow: 0px 1px 0px #000;
           margin: 0;
           padding: 0;
+          color: #efefef;
+          text-shadow: 0px 1px 0px #000;
         }
       }
       
@@ -126,8 +126,8 @@
         thead {
           tr {
             th {
-              text-align:left;
               border-bottom: 2px solid #434343;
+              text-align: left;
               color: #b6b6b6;
             }
           }
@@ -135,9 +135,9 @@
         tbody {
           tr {
             td {
+              border-bottom:1px solid #434343;
               padding: 0 1vw;
               text-align: left;
-              border-bottom:1px solid #434343;
             }
           }
         }
@@ -152,39 +152,37 @@
         }
       }
     
-      /* Page section settings */
+      // Page section settings
       header {
-        z-index: 100;
-        height: 7vw;
-        width: 100vw;
+        border-bottom: 1vw solid $main_border;
         padding: 1vw 0;
+        z-index: 100;
         position: sticky;
         top: 0px;
-        background: $light_background;
-        border-bottom: 1vw solid $main_border;
         display: flex;
         justify-content: center;
         align-items: center;
+        background: $light_background;
         nav {
           ul {
-            padding: 0;
             margin: 0;
+            padding: 0;
             li {
-              display: inline-block;
               margin: 0 3vw;
+              display: inline-block;
             }
           }
         }
-      }
+      } // End of header
     
       main {
+        padding: 1vw 2vw 0;
+        position: relative;
         display: flex;
         flex-flow: column nowrap;
-        padding: 0 2vw;
-        position: relative;
     
         article {
-          padding: 2vw;
+          padding: 0 2vw 2vw;
           overflow-x: hidden;
           img {max-width: 100%;}
           header, footer {position: absolute;}
@@ -192,11 +190,11 @@
 
         aside {
           section {
-            margin: 5vw 0;
+            margin: 5vw 0 0;
             border-top: 1vw solid $main_border;
             ul {
-              padding: 0;
               margin: 0;
+              padding: 0;
             }
           }
           .share {
@@ -204,37 +202,42 @@
               li {display: inline-block;}
             }
           }
+          .related {
+            ul {
+              li {list-style: none;}
+            }
+          }
           .pagination {
             padding: 1vw 0;
             display: flex;
-            justify-content: center;
             align-items: center;
+            justify-content: center;
             ul {
-              padding: 0;
               margin: 0;
+              padding: 0;
               li {
-                display: inline-block;
                 margin: 0 3vw;
+                display: inline-block;
               }
             }
           }
         } // End of aside
         
         .scroll-top {
-          position: absolute;
-          top: 100vh;
           right: 5vw;
           bottom: 0;
+          top: 100vh;
+          position: absolute;
           pointer-events: none;
           a {
-            position: sticky;
-            pointer-events: all;
-            top: calc(100vh - 10vh);
-            display: inline-block;
-            padding: 0.25rem;
-            opacity: 75%;
-            background: $light_background;
             border-radius: 50%;
+            padding: 0.25rem;
+            top: calc(100vh - 10vh);
+            position: sticky;
+            display: inline-block;
+            pointer-events: all;
+            background: $light_background;
+            opacity: 75%;
           }
         }
       } // End of main
@@ -242,17 +245,263 @@
   } // End of html
 
     /* Mobiles */
-  @media only screen and (max-width: 425px) {}
+  @media only screen and (max-width: 425px) {
+    // This is the default - mobile first.
+    html {
+      body {
+        max-width: 100vw;
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        
+        // Page section settings
+        header {
+          width: 100vw;
+          height: 7vw;
+          border-bottom: 1vw solid $main_border;
+          padding: 1vw 0;
+          z-index: 100;
+          position: sticky;
+          top: 0px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background: $light_background;
+          nav {
+            ul {
+              margin: 0;
+              padding: 0;
+              li {
+                margin: 0 3vw;
+                display: inline-block;
+              }
+            }
+          }
+        } // End of header
+      
+        main {
+          padding: 1vw 2vw 0;
+          position: relative;
+          display: flex;
+          flex-flow: column nowrap;
+      
+          article {
+            padding: 0 2vw 2vw;
+            overflow-x: hidden;
+            img {max-width: 100%;}
+            header, footer {position: absolute;}
+          } // End of article
+  
+          aside {
+            section {
+              margin: 5vw 0 0;
+              border-top: 1vw solid $main_border;
+              ul {
+                margin: 0;
+                padding: 0;
+              }
+            }
+            .share {
+              ul {
+                li {display: inline-block;}
+              }
+            }
+            .related {
+              ul {
+                li {list-style: none;}
+              }
+            }
+            .pagination {
+              padding: 1vw 0;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              ul {
+                margin: 0;
+                padding: 0;
+                li {
+                  margin: 0 3vw;
+                  display: inline-block;
+                }
+              }
+            }
+          } // End of aside
+          
+          .scroll-top {
+            right: 5vw;
+            bottom: 0;
+            top: 100vh;
+            position: absolute;
+            pointer-events: none;
+            a {
+              border-radius: 50%;
+              padding: 0.25rem;
+              top: calc(100vh - 10vh);
+              position: sticky;
+              display: inline-block;
+              pointer-events: all;
+              background: $light_background;
+              opacity: 75%;
+            }
+          }
+        } // End of main
+      } // End of body
+    } // End of html
+  }
 
   /* Tablets */
-  @media only screen and (min-width: 426px) and (max-width: 768px) {}
+  @media only screen and (min-width: 426px) and (max-width: 768px) {
+    html {
+      body{
+        flex-direction: row;
+
+        header {
+          width: 20vw;
+          min-height: 100vh;
+          border-bottom: none;
+          border-right: 1vw solid $main_border;
+          position: sticky;
+          top: 0px;
+          justify-content: right;
+          text-align: right;
+          align-items: flex-start;
+          nav {
+            position: sticky;
+            top: 0;
+            padding-right: 1vw;
+            ul {
+              margin: 0;
+              padding: 0;
+              li {
+                margin: 1.5vw 0;
+                display: inline-block;
+              }
+            }
+          }
+        } // End of header
+
+        main {
+          display: flex;
+          flex-flow: column nowrap;
+          position: relative;
+
+          article {
+            width: 80vw;
+            padding: 0;
+            padding-right: 2vw;
+            overflow-x: hidden;
+            img {max-width: 100%;}
+            header, footer {position: absolute;}
+          } // End of article
+        } // End of main
+      } // End of body
+    } // End of html
+  }
   
   /* Laptops (standard) */
-  @media only screen and (min-width: 769px) and (max-width: 1024px) {}
+  @media only screen and (min-width: 769px) and (max-width: 1024px) {
+    html {
+      body{
+        flex-direction: row;
+
+        header {
+          width: 20vw;
+          min-height: 100vh;
+          border-bottom: none;
+          border-right: 1vw solid $main_border;
+          position: sticky;
+          top: 0px;
+          justify-content: right;
+          text-align: right;
+          align-items: flex-start;
+          nav {
+            position: sticky;
+            top: 0;
+            padding-right: 1vw;
+            ul {
+              margin: 0;
+              padding: 0;
+              li {
+                margin: 1.5vw 0;
+                display: inline-block;
+              }
+            }
+          }
+        } // End of header
+
+        main {
+          display: flex;
+          flex-flow: column nowrap;
+          position: relative;
+
+          article {
+            width: 80vw;
+            padding: 0;
+            padding-right: 2vw;
+            overflow-x: hidden;
+            img {max-width: 100%;}
+            header, footer {position: absolute;}
+          } // End of article
+        } // End of main
+      } // End of body
+    } // End of html
+  }
   
   /* Laptops (wide) */
-  @media only screen and (min-width: 1025px) and (max-width: 1440px) {}
+  @media only screen and (min-width: 1025px) and (max-width: 1440px) {
+    html {
+      body{
+        flex-direction: row;
 
+        header {
+          width: 10vw;
+          min-height: 100vh;
+          border-bottom: none;
+          border-right: 1vw solid $main_border;
+          position: sticky;
+          top: 0px;
+          justify-content: right;
+          text-align: right;
+          align-items: flex-start;
+          nav {
+            position: sticky;
+            top: 0;
+            padding-right: 1vw;
+            ul {
+              margin: 0;
+              padding: 0;
+              li {
+                margin: 1.5vw 0;
+                display: inline-block;
+              }
+            }
+          }
+        } // End of header
+
+        main {
+          width: 90vw;
+          display: flex;
+          flex-flow: column nowrap;
+          position: relative;
+
+          article {
+            width: 75%;
+            padding: 0;
+            padding-right: 2vw;
+            overflow-x: hidden;
+            img {max-width: 100%;}
+            header, footer {position: absolute;}
+          } // End of article
+
+          aside {
+            margin-top: 2vw;
+            position: sticky;
+            top: 0;
+          }
+        } // End of main
+      } // End of body
+    } // End of html
+  }
 } // End of screen settings
 
 /* Printer friendly settings */
