--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,16 +1,46 @@
 ---
 layout: default
 ---
-
-<h1>{{ page.title }}</h1>
-<small>{{ page.date | date: "%-d %B %Y" }}</small>
-<br />
-<br />
-{{content}}
-
-{% if page.tags %}
-  <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
-{% endif %}
-<br />
-<br />
-<p><a href="{{ site.github.url }}">Back</a><p>
+<article>
+    <h1>{{ page.title }}</h1>
+    {{content}}
+    <small>Updated: <time>{{ page.date | date: "%Y-%m-%d" }}</time></small>
+</article>
+<aside>
+    <section class="share" aria-label="Share this post">
+        <h3>Share this post:</h3>
+        <ul>
+          <li><a href="https://twitter.com/intent/tweet/?text={{ page.title | escape }}&amp;url={{ page.url | absolute_url | escape }}&amp;via=infosecsapper" target="_blank" rel="noopener" title="Share on Twitter" aria-label="Share on Twitter" class="fab fa-twitter fa-2x"></a></li>
+          <li><a href="https://www.reddit.com/submit?url={{ page.url | absolute_url | escape }}&amp;title={{ page.title | escape }}&amp;text={{ page.excerpt | default: site.description | strip_html | normalize_whitespace | escape }}" target="_blank" rel="noopener" title="Share on Reddit" aria-label="Share on Reddit" class="fab fa-reddit fa-2x"></a></li>
+          <li><a href="https://www.linkedin.com/shareArticle?mini=true&amp;url={{ page.url | absolute_url | escape }}&amp;title={{ page.title | escape }}&amp;summary={{ page.excerpt | default: site.description | strip_html | normalize_whitespace | escape }}&amp;source={{ page.url | absolute_url | escape }}" target="_blank" rel="noopener" title="Share on LinkedIn" aria-label="Share on LinkedIn" class="fab fa-linkedin fa-2x"></a></li>
+          <li><a href="https://news.ycombinator.com/submitlink?u={{ page.url | absolute_url | escape }}&amp;t={{ page.title | escaoe}}" target="_blank" rel="noopener" title="Share on Hacker News" aria-label="Share on Hacker News" class="fab fa-hacker-news fa-2x"></a></li>
+          <li><a href="https://telegram.me/share/url?text={{ page.title | escape }}&amp;url={{ page.url | absolute_url | escape }}" target="_blank" rel="noopener" title="Share on Telegram" aria-label="Share on Telegram" class="fab fa-telegram-plane fa-2x"></a></li>
+          <li><a href="mailto:?subject={{ page.title }}&body={{ page.excerpt | default: site.description | strip_html | normalize_whitespace | escape }}:%20{{ page.url | absolute_url | escape }}" target="_blank" rel="noopener" title="Share by email" aria-label="Share by email" class="fas fa-envelope fa-2x"></a></li>
+        </ul>
+      </section>
+      <section class="related" aria-label="Related posts">
+        <h3>You might also like:</h3>
+        <ul>
+          {% for post in site.related_posts limit:3 %}
+          <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+          {% endfor %}
+        </ul>
+      </section>
+      <section class="pagination" aria-label="Previous and next posts">
+          <ul>
+            {% if page.previous.url %}
+            <li><a href="{{ page.previous.url }}" title="Previous post" aria-label="Previous post">Previous</a></li>
+            {% else %}
+            <li>Previous</li>
+            {% endif %}
+            {% if page.next.url %}
+            <li><a href="{{ page.next.url }}" title="Next post" aria-label="Next post">Next</a></li>
+            {% else %}
+            <li>Next</li>
+            {% endif %}
+          </ul>
+      </section>
+</aside>
+<div class="scroll-top">
+    <a href="#" class="fas fa-arrow-circle-up fa-2x" title="Scroll to top" aria-label="Scroll to Top" aria-hidden="false"></a>
+</div>
